added lombok annotation, Changed the connection method PurchaseList

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.4.12.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+        </dependency>
     </dependencies>
 
 </project>
